# MindForge

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Ascend_PRD_v1.1.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_JOURNAL.md  GEMINI.md  Makefile  PROJECT_STATUS.md  README.md  docker-compose.yml  railway.json
apps/api/: Procfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 05ac5800e642_add_reviews_table_and_membership_.py  3fc5a00097d1_add_sources_table.py  63e7721b9dd0_add_concepts_table.py  789c7891002b_add_relationships_table.py  95d3f2f36019_add_timeline_events_table.py  9a4a79089679_initial_migration.py  9c018000b7e8_add_status_to_captures.py  ac369bd4840e_create_captures_table.py  bf35be717ff1_add_collections_and_memberships_tables.py  c857c28ec538_redesign_reviews_schema.py
apps/api/src/ascend/: __init__.py  main.py
apps/api/src/ascend/api/: dependencies.py
apps/api/src/ascend/application/: uow.py
apps/api/src/ascend/core/: errors.py  logging.py  (+1 more)
apps/api/tests/: conftest.py
apps/api/tests/api/: test_ai_api.py  test_captures_api.py  test_collection_api.py  test_concepts_api.py  test_graph_api.py  test_graph_explorer.py  test_health.py  test_relationships_api.py  test_review_api.py  test_source_api.py  test_timeline_api.py  test_workspace_api.py  test_workspace_process.py
apps/api/tests/application/: test_apply_proposal.py  test_collection_usecases.py  test_concept_usecases.py  test_delete_prevention.py  test_graph_traversal.py  test_guided_capture.py  test_relationship_usecases.py  test_review_usecases.py  test_source_usecases.py  test_uow_events.py
apps/api/tests/infrastructure/: test_capture_repo.py  test_collection_repository.py  test_concept_repo.py  test_event_bus.py  test_relationship_repository.py  test_review_repository.py  test_source_repository.py
(+153 files in other folders)
