[project]
name = "mindforge-api"
version = "0.0.12"
description = "MindForge API foundation."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "sqlmodel>=0.0.16",
    "alembic>=1.13.1",
    "tenacity>=9.1.4",
    "sentry-sdk[fastapi]>=2.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ascend"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    "alembic",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --asyncio-mode=auto"
testpaths = [
    "tests",
]
pythonpath = ["src"]
